<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.4">
  <POU Name="ASCF_ParticipantManager" Id="{5339de58-615e-4169-a638-4ea133a997de}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK ASCF_ParticipantManager
VAR_IN_OUT
	Inputs			: ARRAY[*] OF ASCF_UnionType;			//Union type that holds only one of its possible data types at a time. The type can be selected via the "Typeselector". Independent of the selected type, every value has a quality code "VQC".
	Logic			: ARRAY[*] OF ASCF_CL_FunctionType;			//Function-Element of the Adaptive Logic.
	Outputs			: ARRAY[*] OF ASCF_CL_OutputType;			//Array[*] of "AL_outputType"
END_VAR

VAR
	{attribute 'OPC.UA.DA' := '1'}
  	{attribute 'OPC.UA.DA.StructuredType' := '1'}
	MTP						: MTPChoreographyParticipantManager;
	AdaptiveLogic			: ASCF_ConfigurableLogic;
	stLastViewCur			: BOOL		:= FALSE;
	stLastLogicIndexCur		: UINT		:= 999;
	stLastOutputIndexCur	: UINT		:= 999;
	Execute					: BOOL;
END_VAR

VAR_TEMP
	i						: USINT;
	tmpRestoreDefault		: BOOL;
	tmpExecuteErr			: BOOL;
	defaultLogic			: ASCF_CL_FunctionType;			//Function-Element of the Adaptive Logic.
	defaultOutput			: ASCF_CL_OutputType;			//Output-Element of the Adaptive Logic.
END_VAR

VAR CONSTANT
	MIN_IDX					: UINT		:= 0;
	VIEW_PREP_CONFIG		: BOOL		:= FALSE;
	VIEW_ACT_CONFIG			: BOOL		:= TRUE;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//#############################################################################
{region "RUN ADAPTIVE LOGIC"}
    AdaptiveLogic( Inputs	:= Inputs,
                   Logic	:= Logic,
                   Outputs	:= Outputs,
				   Execute	:= Execute);
{endregion}
    

//#############################################################################
{region "SETUP"}
    // wqc
    MTP.WQC := 16#FF;
    
    // view selection
    MTP.ViewCur := MTP.ViewSel;
    
    // index
    MTP.Input_IndexMax := DINT_TO_UINT(UPPER_BOUND(Inputs, 1));
    MTP.Input_IndexCur := LIMIT(MIN_IDX, MTP.Input_IndexSel, MTP.Input_IndexMax);
    
    MTP.Logic_IndexMax := DINT_TO_UINT(UPPER_BOUND(Logic, 1));
    MTP.Logic_IndexCur := LIMIT(MIN_IDX, MTP.Logic_IndexSel, MTP.Logic_IndexMax);
    
    MTP.Output_IndexMax := DINT_TO_UINT(UPPER_BOUND(Outputs, 1));
    MTP.Output_IndexCur := LIMIT(MIN_IDX, MTP.Output_IndexSel, MTP.Output_IndexMax);
    
    // restore default
    MTP.RestoreDefaultEn := TRUE;
    
    IF MTP.RestoreDefaultEn AND MTP.RestoreDefault
    THEN
        tmpRestoreDefault := TRUE;
        
        FOR i := UINT_TO_USINT(MIN_IDX) TO UINT_TO_USINT(MTP.Logic_IndexMax) DO
            Logic[i].PreparedConfig := defaultLogic.PreparedConfig;
        END_FOR;

        FOR i := UINT_TO_USINT(MIN_IDX) TO UINT_TO_USINT(MTP.Output_IndexMax) DO
            Outputs[i].PreparedConfig := defaultOutput.PreparedConfig;
        END_FOR;

    END_IF;
    MTP.RestoreDefault := FALSE;
    
    // execute
    MTP.ExecuteEn := TRUE;
    
    IF MTP.ExecuteEn AND MTP.ExecuteOn
    THEN
        //vorher:	AdaptiveLogic.Execute := TRUE;
		Execute := TRUE;
    END_IF;
    MTP.ExecuteOn := FALSE;
    
    IF MTP.ExecuteEn AND MTP.ExecuteOff
    THEN
        //vorher:	AdaptiveLogic.Execute := FALSE;
		Execute := FALSE;
    END_IF;
    MTP.ExecuteOff := FALSE;
    
    //vorher:	MTP.ExecuteAct := AdaptiveLogic.Execute;
    MTP.ExecuteAct := Execute;
    FOR i := UINT_TO_USINT(MIN_IDX) TO UINT_TO_USINT(MTP.Logic_IndexMax) DO
        IF Logic[i]._Ret <> 0
        THEN
            tmpExecuteErr := TRUE;
            EXIT;
        END_IF;
    END_FOR;
    
    IF NOT tmpExecuteErr
    THEN
        FOR i := UINT_TO_USINT(MIN_IDX) TO UINT_TO_USINT(MTP.Output_IndexMax) DO
            IF Outputs[i].Status <> 0
            THEN
                tmpExecuteErr := TRUE;
                EXIT;
            END_IF;
        END_FOR;
    END_IF;
    
    MTP.ExecuteErr := tmpExecuteErr;
{endregion}
    



//#############################################################################
{region "INPUTS"}
    // value
    MTP.Input_VQC := Inputs[MTP.Input_IndexCur].VQC;
    MTP.Input_DataType := Inputs[MTP.Input_IndexCur].Typeselector;
    MTP.Input_VReal := Inputs[MTP.Input_IndexCur].VReal;
    MTP.Input_VDInt := Inputs[MTP.Input_IndexCur].VDInt;
    MTP.Input_VDWord := Inputs[MTP.Input_IndexCur].VDWord;
    MTP.Input_VBool := Inputs[MTP.Input_IndexCur].VBool;
    MTP.Input_VString := Inputs[MTP.Input_IndexCur].VString;
{endregion}
    



//#############################################################################
{region "LOGIC"}
    // value & ret
    MTP.Logic_Out_VQC := Logic[MTP.Logic_IndexCur].Out.VQC;
    MTP.Logic_Out_DataType := Logic[MTP.Logic_IndexCur].Out.Typeselector;
    MTP.Logic_Out_VReal := Logic[MTP.Logic_IndexCur].Out.VReal;
    MTP.Logic_Out_VDInt := Logic[MTP.Logic_IndexCur].Out.VDInt;
    MTP.Logic_Out_VDWord := Logic[MTP.Logic_IndexCur].Out.VDWord;
    MTP.Logic_Out_VBool := Logic[MTP.Logic_IndexCur].Out.VBool;
    MTP.Logic_Out_VString := Logic[MTP.Logic_IndexCur].Out.VString;
    MTP.Logic_Ret := Logic[MTP.Logic_IndexCur]._Ret;
    
    // config
    IF MTP.ViewCur = VIEW_ACT_CONFIG THEN
        
        MTP.Logic_FuncTypeSel := Logic[MTP.Logic_IndexCur].ActiveConfig.Selector;
        MTP.Logic_In0_Source := Logic[MTP.Logic_IndexCur].ActiveConfig.Arguments[0].Source;
        MTP.Logic_In0_Index := Logic[MTP.Logic_IndexCur].ActiveConfig.Arguments[0].Index;
        
        MTP.Logic_In0_Const_VQC := Logic[MTP.Logic_IndexCur].ActiveConfig.Arguments[0].Const.VQC;
        MTP.Logic_In0_Const_DataTypeSel := Logic[MTP.Logic_IndexCur].ActiveConfig.Arguments[0].Const.Typeselector;
        MTP.Logic_In0_Const_VReal := Logic[MTP.Logic_IndexCur].ActiveConfig.Arguments[0].Const.VReal;
        MTP.Logic_In0_Const_VDInt := Logic[MTP.Logic_IndexCur].ActiveConfig.Arguments[0].Const.VDInt;
        MTP.Logic_In0_Const_VDWord := Logic[MTP.Logic_IndexCur].ActiveConfig.Arguments[0].Const.VDWord;
        MTP.Logic_In0_Const_VBool := Logic[MTP.Logic_IndexCur].ActiveConfig.Arguments[0].Const.VBool;
        MTP.Logic_In0_Const_VString := Logic[MTP.Logic_IndexCur].ActiveConfig.Arguments[0].Const.VString;
        
        MTP.Logic_In1_Source := Logic[MTP.Logic_IndexCur].ActiveConfig.Arguments[1].Source;
        MTP.Logic_In1_Index := Logic[MTP.Logic_IndexCur].ActiveConfig.Arguments[1].Index;
        MTP.Logic_In1_Const_VQC := Logic[MTP.Logic_IndexCur].ActiveConfig.Arguments[1].Const.VQC;
        MTP.Logic_In1_Const_DataTypeSel := Logic[MTP.Logic_IndexCur].ActiveConfig.Arguments[1].Const.Typeselector;
        MTP.Logic_In1_Const_VReal := Logic[MTP.Logic_IndexCur].ActiveConfig.Arguments[1].Const.VReal;
        MTP.Logic_In1_Const_VDInt := Logic[MTP.Logic_IndexCur].ActiveConfig.Arguments[1].Const.VDInt;
        MTP.Logic_In1_Const_VDWord := Logic[MTP.Logic_IndexCur].ActiveConfig.Arguments[1].Const.VDWord;
        MTP.Logic_In1_Const_VBool := Logic[MTP.Logic_IndexCur].ActiveConfig.Arguments[1].Const.VBool;
        MTP.Logic_In1_Const_VString := Logic[MTP.Logic_IndexCur].ActiveConfig.Arguments[1].Const.VString;
        
        MTP.Logic_In2_Source := Logic[MTP.Logic_IndexCur].ActiveConfig.Arguments[2].Source;
        MTP.Logic_In2_Index := Logic[MTP.Logic_IndexCur].ActiveConfig.Arguments[2].Index;
        MTP.Logic_In2_Const_VQC := Logic[MTP.Logic_IndexCur].ActiveConfig.Arguments[2].Const.VQC;
        MTP.Logic_In2_Const_DataTypeSel := Logic[MTP.Logic_IndexCur].ActiveConfig.Arguments[2].Const.Typeselector;
        MTP.Logic_In2_Const_VReal := Logic[MTP.Logic_IndexCur].ActiveConfig.Arguments[2].Const.VReal;
        MTP.Logic_In2_Const_VDInt := Logic[MTP.Logic_IndexCur].ActiveConfig.Arguments[2].Const.VDInt;
        MTP.Logic_In2_Const_VDWord := Logic[MTP.Logic_IndexCur].ActiveConfig.Arguments[2].Const.VDWord;
        MTP.Logic_In2_Const_VBool := Logic[MTP.Logic_IndexCur].ActiveConfig.Arguments[2].Const.VBool;
        MTP.Logic_In2_Const_VString := Logic[MTP.Logic_IndexCur].ActiveConfig.Arguments[2].Const.VString;
        
        MTP.Logic_In3_Source := Logic[MTP.Logic_IndexCur].ActiveConfig.Arguments[3].Source;
        MTP.Logic_In3_Index := Logic[MTP.Logic_IndexCur].ActiveConfig.Arguments[3].Index;
        MTP.Logic_In3_Const_VQC := Logic[MTP.Logic_IndexCur].ActiveConfig.Arguments[3].Const.VQC;
        MTP.Logic_In3_Const_DataTypeSel := Logic[MTP.Logic_IndexCur].ActiveConfig.Arguments[3].Const.Typeselector;
        MTP.Logic_In3_Const_VReal := Logic[MTP.Logic_IndexCur].ActiveConfig.Arguments[3].Const.VReal;
        MTP.Logic_In3_Const_VDInt := Logic[MTP.Logic_IndexCur].ActiveConfig.Arguments[3].Const.VDInt;
        MTP.Logic_In3_Const_VDWord := Logic[MTP.Logic_IndexCur].ActiveConfig.Arguments[3].Const.VDWord;
        MTP.Logic_In3_Const_VBool := Logic[MTP.Logic_IndexCur].ActiveConfig.Arguments[3].Const.VBool;
        MTP.Logic_In3_Const_VString := Logic[MTP.Logic_IndexCur].ActiveConfig.Arguments[3].Const.VString;
        
        MTP.Logic_Out_VQC := Logic[MTP.Logic_IndexCur].Out.VQC;
        MTP.Logic_Out_DataType := Logic[MTP.Logic_IndexCur].Out.Typeselector;
        MTP.Logic_Out_VReal := Logic[MTP.Logic_IndexCur].Out.VReal;
        MTP.Logic_Out_VDInt := Logic[MTP.Logic_IndexCur].Out.VDInt;
        MTP.Logic_Out_VDWord := Logic[MTP.Logic_IndexCur].Out.VDWord;
        MTP.Logic_Out_VBool := Logic[MTP.Logic_IndexCur].Out.VBool;
        MTP.Logic_Out_VString := Logic[MTP.Logic_IndexCur].Out.VString;
        
        
    ELSIF MTP.ViewCur = VIEW_PREP_CONFIG
        AND (stLastViewCur = VIEW_ACT_CONFIG OR MTP.Logic_IndexCur <> stLastLogicIndexCur OR tmpRestoreDefault) THEN
        
        MTP.Logic_FuncTypeSel := Logic[MTP.Logic_IndexCur].PreparedConfig.Selector;
        MTP.Logic_In0_Source := Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[0].Source;
        MTP.Logic_In0_Index := Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[0].Index;
        
        MTP.Logic_In0_Const_VQC := Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[0].Const.VQC;
        MTP.Logic_In0_Const_DataTypeSel := Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[0].Const.Typeselector;
        MTP.Logic_In0_Const_VReal := Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[0].Const.VReal;
        MTP.Logic_In0_Const_VDInt := Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[0].Const.VDInt;
        MTP.Logic_In0_Const_VDWord := Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[0].Const.VDWord;
        MTP.Logic_In0_Const_VBool := Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[0].Const.VBool;
        MTP.Logic_In0_Const_VString := Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[0].Const.VString;
        
        MTP.Logic_In1_Source := Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[1].Source;
        MTP.Logic_In1_Index := Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[1].Index;
        MTP.Logic_In1_Const_VQC := Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[1].Const.VQC;
        MTP.Logic_In1_Const_DataTypeSel := Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[1].Const.Typeselector;
        MTP.Logic_In1_Const_VReal := Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[1].Const.VReal;
        MTP.Logic_In1_Const_VDInt := Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[1].Const.VDInt;
        MTP.Logic_In1_Const_VDWord := Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[1].Const.VDWord;
        MTP.Logic_In1_Const_VBool := Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[1].Const.VBool;
        MTP.Logic_In1_Const_VString := Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[1].Const.VString;
        
        MTP.Logic_In2_Source := Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[2].Source;
        MTP.Logic_In2_Index := Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[2].Index;
        MTP.Logic_In2_Const_VQC := Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[2].Const.VQC;
        MTP.Logic_In2_Const_DataTypeSel := Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[2].Const.Typeselector;
        MTP.Logic_In2_Const_VReal := Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[2].Const.VReal;
        MTP.Logic_In2_Const_VDInt := Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[2].Const.VDInt;
        MTP.Logic_In2_Const_VDWord := Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[2].Const.VDWord;
        MTP.Logic_In2_Const_VBool := Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[2].Const.VBool;
        MTP.Logic_In2_Const_VString := Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[2].Const.VString;
        
        MTP.Logic_In3_Source := Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[3].Source;
        MTP.Logic_In3_Index := Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[3].Index;
        MTP.Logic_In3_Const_VQC := Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[3].Const.VQC;
        MTP.Logic_In3_Const_DataTypeSel := Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[3].Const.Typeselector;
        MTP.Logic_In3_Const_VReal := Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[3].Const.VReal;
        MTP.Logic_In3_Const_VDInt := Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[3].Const.VDInt;
        MTP.Logic_In3_Const_VDWord := Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[3].Const.VDWord;
        MTP.Logic_In3_Const_VBool := Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[3].Const.VBool;
        MTP.Logic_In3_Const_VString := Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[3].Const.VString;
        
        
    ELSIF MTP.ViewCur = VIEW_PREP_CONFIG THEN
        
        Logic[MTP.Logic_IndexCur].PreparedConfig.Selector := MTP.Logic_FuncTypeSel;
        
        Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[0].Source := MTP.Logic_In0_Source;
        Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[0].Index := MTP.Logic_In0_Index;
        Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[0].Const.VQC := MTP.Logic_In0_Const_VQC;
        Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[0].Const.Typeselector := MTP.Logic_In0_Const_DataTypeSel;
        Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[0].Const.VReal := MTP.Logic_In0_Const_VReal;
        Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[0].Const.VDInt := MTP.Logic_In0_Const_VDInt;
        Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[0].Const.VDWord := MTP.Logic_In0_Const_VDWord;
        Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[0].Const.VBool := MTP.Logic_In0_Const_VBool;
        Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[0].Const.VString := MTP.Logic_In0_Const_VString;
        
        Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[1].Source := MTP.Logic_In1_Source;
        Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[1].Index := MTP.Logic_In1_Index;
        Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[1].Const.VQC := MTP.Logic_In1_Const_VQC;
        Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[1].Const.Typeselector := MTP.Logic_In1_Const_DataTypeSel;
        Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[1].Const.VReal := MTP.Logic_In1_Const_VReal;
        Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[1].Const.VDInt := MTP.Logic_In1_Const_VDInt;
        Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[1].Const.VDWord := MTP.Logic_In1_Const_VDWord;
        Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[1].Const.VBool := MTP.Logic_In1_Const_VBool;
        Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[1].Const.VString := MTP.Logic_In1_Const_VString;
        
        Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[2].Source := MTP.Logic_In2_Source;
        Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[2].Index := MTP.Logic_In2_Index;
        Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[2].Const.VQC := MTP.Logic_In2_Const_VQC;
        Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[2].Const.Typeselector := MTP.Logic_In2_Const_DataTypeSel;
        Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[2].Const.VReal := MTP.Logic_In2_Const_VReal;
        Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[2].Const.VDInt := MTP.Logic_In2_Const_VDInt;
        Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[2].Const.VDWord := MTP.Logic_In2_Const_VDWord;
        Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[2].Const.VBool := MTP.Logic_In2_Const_VBool;
        Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[2].Const.VString := MTP.Logic_In2_Const_VString;
        
        Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[3].Source := MTP.Logic_In3_Source;
        Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[3].Index := MTP.Logic_In3_Index;
        Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[3].Const.VQC := MTP.Logic_In3_Const_VQC;
        Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[3].Const.Typeselector := MTP.Logic_In3_Const_DataTypeSel;
        Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[3].Const.VReal := MTP.Logic_In3_Const_VReal;
        Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[3].Const.VDInt := MTP.Logic_In3_Const_VDInt;
        Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[3].Const.VDWord := MTP.Logic_In3_Const_VDWord;
        Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[3].Const.VBool := MTP.Logic_In3_Const_VBool;
        Logic[MTP.Logic_IndexCur].PreparedConfig.Arguments[3].Const.VString := MTP.Logic_In3_Const_VString;
        
    END_IF;
{endregion}
    



//#############################################################################
{region "OUTPUT"}
    // value & ret
    MTP.Output_Value_VQC := Outputs[MTP.Output_IndexCur].Value.VQC;
    MTP.Output_Value_DataTypeSel := Outputs[MTP.Output_IndexCur].Value.Typeselector;
    MTP.Output_Value_VReal := Outputs[MTP.Output_IndexCur].Value.VReal;
    MTP.Output_Value_VDInt := Outputs[MTP.Output_IndexCur].Value.VDInt;
    MTP.Output_Value_VDWord := Outputs[MTP.Output_IndexCur].Value.VDWord;
    MTP.Output_Value_VBool := Outputs[MTP.Output_IndexCur].Value.VBool;
    MTP.Output_Value_VString := Outputs[MTP.Output_IndexCur].Value.VString;
    MTP.Output_DataType := Outputs[MTP.Output_IndexCur].DataType;
    MTP.Output_Ret := Outputs[MTP.Output_IndexCur].Status;
    
    // config
    IF MTP.ViewCur = VIEW_ACT_CONFIG THEN
        
        MTP.Output_Source := Outputs[MTP.Output_IndexCur].ActiveConfig.Source;
        MTP.Output_Index := Outputs[MTP.Output_IndexCur].ActiveConfig.Index;
        
        MTP.Output_Const_VQC := Outputs[MTP.Output_IndexCur].ActiveConfig.Const.VQC;
        MTP.Output_Const_DataTypeSel := Outputs[MTP.Output_IndexCur].ActiveConfig.Const.Typeselector;
        MTP.Output_Const_VReal := Outputs[MTP.Output_IndexCur].ActiveConfig.Const.VReal;
        MTP.Output_Const_VDInt := Outputs[MTP.Output_IndexCur].ActiveConfig.Const.VDInt;
        MTP.Output_Const_VDWord := Outputs[MTP.Output_IndexCur].ActiveConfig.Const.VDWord;
        MTP.Output_Const_VBool := Outputs[MTP.Output_IndexCur].ActiveConfig.Const.VBool;
        MTP.Output_Const_VString := Outputs[MTP.Output_IndexCur].ActiveConfig.Const.VString;
        
        
    ELSIF MTP.ViewCur = VIEW_PREP_CONFIG
        AND (stLastViewCur = VIEW_ACT_CONFIG OR MTP.Output_IndexCur <> stLastOutputIndexCur) THEN
        
        MTP.Output_Source := Outputs[MTP.Output_IndexCur].PreparedConfig.Source;
        MTP.Output_Index := Outputs[MTP.Output_IndexCur].PreparedConfig.Index;
        
        MTP.Output_Const_VQC := Outputs[MTP.Output_IndexCur].PreparedConfig.Const.VQC;
        MTP.Output_Const_DataTypeSel := Outputs[MTP.Output_IndexCur].PreparedConfig.Const.Typeselector;
        MTP.Output_Const_VReal := Outputs[MTP.Output_IndexCur].PreparedConfig.Const.VReal;
        MTP.Output_Const_VDInt := Outputs[MTP.Output_IndexCur].PreparedConfig.Const.VDInt;
        MTP.Output_Const_VDWord := Outputs[MTP.Output_IndexCur].PreparedConfig.Const.VDWord;
        MTP.Output_Const_VBool := Outputs[MTP.Output_IndexCur].PreparedConfig.Const.VBool;
        MTP.Output_Const_VString := Outputs[MTP.Output_IndexCur].PreparedConfig.Const.VString;
        
        
    ELSIF MTP.ViewCur = VIEW_PREP_CONFIG THEN
        
        Outputs[MTP.Output_IndexCur].PreparedConfig.Source := MTP.Output_Source;
        Outputs[MTP.Output_IndexCur].PreparedConfig.Index := MTP.Output_Index;
        
        Outputs[MTP.Output_IndexCur].PreparedConfig.Const.VQC := MTP.Output_Const_VQC;
        Outputs[MTP.Output_IndexCur].PreparedConfig.Const.Typeselector := MTP.Output_Const_DataTypeSel;
        Outputs[MTP.Output_IndexCur].PreparedConfig.Const.VReal := MTP.Output_Const_VReal;
        Outputs[MTP.Output_IndexCur].PreparedConfig.Const.VDInt := MTP.Output_Const_VDInt;
        Outputs[MTP.Output_IndexCur].PreparedConfig.Const.VDWord := MTP.Output_Const_VDWord;
        Outputs[MTP.Output_IndexCur].PreparedConfig.Const.VBool := MTP.Output_Const_VBool;
        Outputs[MTP.Output_IndexCur].PreparedConfig.Const.VString := MTP.Output_Const_VString;
        
    END_IF;
{endregion}
    



//#############################################################################
{region "FINISH"}
    stLastViewCur := MTP.ViewCur;
    stLastLogicIndexCur := MTP.Logic_IndexCur;
    stLastOutputIndexCur := MTP.Output_IndexCur;
{endregion}]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>